--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+    .contactinput{
+        @apply outline-none bg-[#404040] rounded-sm border-b px-6 py-4 border-[black] text-blue-300 placeholder-gray-300 transition-all focus:border-[#F7AB0A]/40 focus:text-[blue-300]
+    }
+}
